bonus/confs/kubernetes-dashboard/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
