bonus/confs/kubernetes-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: selfsigned
    acme.cert-manager.io/http01-edit-in-place: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-dashboard@kubernetes-dashboard
spec:
  tls:
    - hosts:
        - dashboard.iounejja.com
      secretName: dashboard-tls
  rules:
    - host: dashboard.iounejja.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 8000
